Solve mysterious but minimal layout bug

--- a/themes/skeleton/static/css/style.css
+++ b/themes/skeleton/static/css/style.css
@@ -65,6 +65,7 @@ header{
   text-decoration: none;
 }
 .header-link{
+  font-family: 'ff-scala-sans-pro', system-ui;
   float: right;
   color: black;
 }
